--- a/Padaria.HTML
+++ b/Padaria.HTML
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Padaria</title>
     <script src="https://kit.fontawesome.com/e528851931.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="Padaria.css">
 </head>
 <body>
@@ -278,7 +279,7 @@
 
   </footer>
   
-  <script src="script.js"></script>
+  <script src="Padaria.js" defer></script>
 </body>
 
 
@@ -295,6 +296,5 @@
   new window.VLibras.Widget('https://vlibras.gov.br/app');
 </script>
 
-<script src="Padaria.js"></script>
 
 </html>
